--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #99cccc;
     background-image: url(back.png);
-    background-repeat: -x;
+    background-repeat: repeat-x;
 }
 
 h1 {
